--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -26,7 +26,7 @@
     gap: 16px;
     width: 70%;
     height: 50vh;
-    background-color: #ffffff;
+    background-color: rgb(255, 227, 209);
     top: 100%;
     right: 0;
     padding: 32px 24px;
@@ -91,8 +91,8 @@
 }
 @media screen and (min-width: 769px) {
     .afrimentary__menu {
-        width: 50%;
-        height: 80vh;
+        width: 40%;
+        height: calc(100vh - 80px);
     } 
     .btn {
         padding: 12px 32px;
