--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,6 +1,6 @@
 .afrimentary__header {
     width:  100%;
-    height: 80px;
+    height: 128px;
     background-color: var(--primary-color);
     display: flex;
     justify-content: center;
@@ -15,13 +15,14 @@
     align-items: center;
     color: #fff;
 }
+
 .afrimentary__logo h1 {
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-weight: 500;
 }
 .afrimentary__menu {
     position: absolute;
-    display: flex;
+    display: none;
     flex-direction: column;
     gap: 16px;
     width: 70%;
@@ -32,6 +33,9 @@
     padding: 32px 24px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     z-index: 3;
+}
+.hide__menu {
+    display: flex;
 }
 .nav__menu {
     width: 100%;
@@ -48,6 +52,7 @@
     align-items: center;
     list-style: none;
 }
+
 .item > a {
     color: var(--greens);
     letter-spacing: 1px;
@@ -73,7 +78,7 @@
 .btn:hover {
     transform: scale(1.05)
 }
-.btn-login{
+.btn-login {
     background-color: var(--greens);
 }
 
@@ -89,12 +94,78 @@
         gap: 20px;
     }
 }
-@media screen and (min-width: 769px) {
-    .afrimentary__menu {
+@media screen and (min-width: 900px) {
+    .afrimentary__logo h1 {
+        font-size: 2rem;
+    }
+    /* .afrimentary__menu {
         width: 40%;
         height: calc(100vh - 80px);
-    } 
+    }  */
+    .afrimentary__menu {
+        background-color: var(--primary-color);
+        display: flex;
+        flex-direction: row;
+        width: auto;
+        height: 100%;
+        justify-content: space-between;
+        align-items: center;
+        top: 0;
+        gap: 64px;
+    }
+    .menu__items {
+        list-style: none;
+        flex-direction: row;
+        gap: 48px;
+        font-size: 1.3rem;
+        font-weight: 300;
+        color: #fff;
+    }
+    .nav__btns {
+        height: 100%;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 24px;
+        gap: 48px;
+    }
+    .item {
+        position: relative;
+        padding: 8px;
+    }
+    .item::after {
+        content: "";
+        position: absolute;
+        width: 0;
+        height: 5px;
+        background-color: #fff;
+        left: 0;
+        top: 100%;
+        transition: all 0.2s ease-in-out;
+    }
+    .item:hover::after {
+        width: 100%;
+    }
+    .item > a {
+        color: #fff;
+    }
+    .nav__hamburger {
+        display: none;
+    }
     .btn {
         padding: 12px 32px;
+        background-color: #fff;
+        width: auto;
+    }
+    .btn > a {
+        color: var(--greens);
+    }
+    .btn-login {
+        background-color: var(--greens);
+    }
+    .btn-signup {
+        width: 128px;
+    }
+    .btn-login a {
+        color: #fff;
     }
 }
