--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -2,30 +2,27 @@
     position: relative;
     width: 100%;
     height: calc(100vh - 80px);
-    /* ff 3.6+ */
-    background:-moz-linear-gradient(150deg, rgba(225, 225, 225, 1) 11%, rgba(148, 148, 148, 1) 100%); 
-
-    /* safari 5.1+,chrome 10+ */
-    background:-webkit-linear-gradient(150deg, rgba(225, 225, 225, 1) 11%, rgba(148, 148, 148, 1) 100%);
-
-    /* opera 11.10+ */
-    background:-o-linear-gradient(150deg, rgba(225, 225, 225, 1) 11%, rgba(148, 148, 148, 1) 100%);
-
-    /* ie 6-9 */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#949494', endColorstr='#E1E1E1', GradientType=1 );
-
-    /* ie 10+ */
-    background:-ms-linear-gradient(150deg, rgba(225, 225, 225, 1) 11%, rgba(148, 148, 148, 1) 100%);
-
-    /* global 94%+ browsers support */
-    background:linear-gradient(150deg, rgba(0, 0, 0, 0.5) 11%, rgba(0, 0, 0, 1) 100%), url("./hero-bg.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 32px;
+}
+.hero__bg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.hero__bg-cover {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background:-moz-linear-gradient(150deg, rgba(0, 0, 0, 0.5) 11%, rgba(0, 0, 0, 1) 100%); 
+    background:-webkit-linear-gradient(150deg, rgba(0, 0, 0, 0.5) 11%, rgba(0, 0, 0, 1) 100%);
+    background:-o-linear-gradient(150deg, rgba(0, 0, 0, 0.5) 11%, rgba(0, 0, 0, 1) 100%);
+    background: -ms-linear-gradient(150deg, rgba(0, 0, 0, 0.5) 11%, rgba(0, 0, 0, 1) 100%);
+    background: linear-gradient(150deg, rgba(0, 0, 0, 0.4) 11%, rgba(0, 0, 0, 9) 100%);
+    z-index: 2;
 }
 .afrimentary__hero::before {
     content: "";
@@ -36,11 +33,15 @@
     top: calc(100% - 32px);
     left: -50%;
     transform: rotate(4deg);
+    z-index: 3;
 }
 .hero__heading {
+    position: absolute;
     font-size: 3rem;
     font-weight: 700;
     letter-spacing: 2px;
+    padding: 32px;
+    z-index: 4;
 }
 .heading-primary {
     color: var(--primary-color);
