--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -106,12 +106,12 @@
         background-color: var(--primary-color);
         display: flex;
         flex-direction: row;
-        width: auto;
+        flex-wrap: nowrap;
+        width: 70%;
         height: 100%;
         justify-content: space-between;
         align-items: center;
         top: 0;
-        gap: 64px;
     }
     .menu__items {
         list-style: none;
@@ -126,7 +126,7 @@
         align-items: center;
         justify-content: space-between;
         padding: 0 24px;
-        gap: 48px;
+        gap: 32px;
     }
     .item {
         position: relative;
