--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -68,7 +68,7 @@
     position: absolute;
     width: 80%;
     height: 7px;
-    background-color: var(--primary-color);
+    background-color: #dcdcdc;
     left: 50%;
     transform: translateX(-50%);
     top: 100%;
@@ -76,8 +76,7 @@
 
 .afrimentary__brief {
     position: relative;
-    padding: 0 32px;
-    margin: 64px 0;
+    padding: 64px 32px;
     font-size: 2.5rem;
     font-weight: 600;
     color: var(--greens);
@@ -105,6 +104,7 @@
     font-size: 1.5rem;
     font-weight: 500;
     word-spacing: 5px;
+    text-align: justify;
 }
 .afrimentary__how {
     position: relative;
@@ -292,7 +292,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
+        height: calc(100vh - 80px);
     }
     .hero__heading {
         font-size: 3.5rem;
@@ -300,21 +300,22 @@
     }
     .afrimentary__brief {
         width: 80%;
-        font-size: 3.5rem;
+        font-size: 4rem;
         font-weight: 500;
         height: 300px;
         display: flex;
         align-items: center;
+        margin: 96px auto;
     }
     .afrimentary__mission  {
         display: grid;
         grid-template-columns: 1fr 3fr;
         gap: 48px;
-        padding: 96px 32px
+        padding: 96px 64px
     }
     .mission__main > p {
         font-size: 2.2rem;
-        word-spacing: 7px;
+        word-spacing: 1px;
         font-weight: 400;
     }
     .mission_sidebar p {
@@ -331,7 +332,7 @@
         transform: scale(1.05);
     }
     .how__text {
-        font-size: 2.5rem;
+        font-size: 3rem;
         letter-spacing: 2px;
     }
     .how__cta p {
