--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -128,7 +128,7 @@
         padding: 0;
         gap: 32px;
     }
-    .item {
+    .menu__items .item {
         position: relative;
         padding: 8px;
     }
