--- a/src/Pages/Signup/signup.css
+++ b/src/Pages/Signup/signup.css
@@ -196,6 +196,27 @@
     background-color: rgba(255, 255, 255, 0.3);
     border-bottom: 0.5px solid #393939;
 }
+.signup__form .form__field-check {
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 32px;
+    color: #656565;
+}
+.form__field-check a {
+    color: var(--primary-color);
+    font-weight: 400;
+    text-decoration: underline;
+}
+.signup__form .form__field-check input {
+    width: 32px;
+    height: 32px;
+}
+.form__field-check input:checked {
+    background-color: var(--primary-color);
+}
 .signup__form .form__submit {
     position: absolute;
     padding: 8px 40px;
