--- a/src/Components/Expanders/expanders.css
+++ b/src/Components/Expanders/expanders.css
@@ -23,7 +23,7 @@
 .answer {
     width: 90%;
     color: #e5e5e5;
-    padding: 0 0 16px 32px;
+    padding: 0 0 16px;
 }
 @media screen and (min-width: 480px) {
     .question {
