--- a/src/Components/Expanders/expanders.css
+++ b/src/Components/Expanders/expanders.css
@@ -21,9 +21,9 @@
     font-weight: 600;
 }
 .answer {
-    width: 90%;
     color: #e5e5e5;
     padding: 0 0 16px;
+    text-align: justify;
 }
 @media screen and (min-width: 480px) {
     .question {
