--- a/src/Pages/About/about.css
+++ b/src/Pages/About/about.css
@@ -11,9 +11,7 @@
     font-size: 2.5rem;
     font-weight: 600;
     line-height: 1.3;
-}
-.intro__bold .text__muted {
-    color: #4a4a4a;
+    color: var(--primary-color);
 }
 
 .intro__light {
@@ -100,8 +98,7 @@
     margin: 0 auto;
     height: auto;
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    border-top: 2px solid #dadada;
+    grid-template-columns: 2fr 1fr;
     color: #595959;
 }
 
@@ -110,6 +107,9 @@
     flex-direction: column;
     gap: 24px;
     text-align: justify;
+}
+.mission__title {
+    text-align: center;
 }
 .info__header {
     font-size: 1.2rem;
@@ -121,7 +121,7 @@
 }
 .about__why {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr 2fr;
     width: 80%;
     margin: 0 auto;
     padding: 48px 0;
@@ -148,21 +148,23 @@
 
 @media screen and (max-width: 900px) {
     .about__intro {
-        width: 100%;
-        padding: 32px 16px;
+        width: 90%;
+        padding: 32px 0;
     }
     .titles {
         text-align: center;
         font-weight: 600;
     }
     .about__mission {
+        width: 90%;
         display: flex;
         gap: 32px;
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
     .about__why {
+        width: 90%;
         display: flex;
-        flex-direction: column-reverse;
+        flex-direction: column;
         gap: 32px
     }
     .mission__info {
@@ -173,6 +175,9 @@
     }
 }
 @media screen and (max-width: 480px) {
+    .about__image {
+        margin: 0 0 32px;
+    }
     .about__intro {
         display: flex;
         flex-direction: column;
@@ -182,7 +187,7 @@
         font-size: 2rem;
     }
     .titles {
-        font-size: 1.5rem;
+        font-size: 1.7rem;
     }
     .about__mission {
         width: 100%;
