--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,7 +1,7 @@
 .afrimentary__footer {
     position: relative;
     height: auto;
-    padding: 80px 32px 16px;
+    padding: 80px 0 16px;
     color: var(--primary-color);
 }
 .footer__info {
@@ -28,10 +28,13 @@
 }
 @media screen and (min-width: 480px) {
     .afrimentary__footer {
-        padding: 96px 32px 16px;
+        padding: 96px 16px 16px;
+        width: 100%;
+        height: 100%;
     }
     .footer__main {
         display: flex;
+        justify-content: space-between;
         padding: 0 0 48px;
     }
     .footer__info h2 {
