--- a/src/Pages/RespondentAccount/respondentAccount.css
+++ b/src/Pages/RespondentAccount/respondentAccount.css
@@ -10,14 +10,18 @@
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap: 32px;
+    position: relative;
+}
+.sidebar__controls {
+    display: none;
 }
 .respondent__dash-sidebar {
-    padding: 32px;
+    padding: 64px 32px;
     display: flex;
     flex-direction: column;
-    gap: 48px;
+    gap: 64px;
     border-radius: 12px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 .respondentsidebar__info {
     width: 100%;
@@ -28,18 +32,19 @@
     gap: 16px;
     color: var(--primary-color);
 }
-.respondentsidebar__info img {
-    width: 64px;
-    height: 64px;
-}
 .respondent__name {
     font-weight: 600;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
 }
 .respondent__email {
     font-weight: 300;
     font-size: 0.9rem;
     font-style: italic;
+}
+.respondent__id {
+    font-weight: 300;
+    font-size: 0.7rem;
+    color: var(--greens);
 }
 .respondent__dash-sidebar hr {
     border: 1px solid rgb(216, 216, 216);
@@ -58,7 +63,7 @@
 .respondent__dash-main {
     width: 100%;
     height: 100%;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     padding: 32px;
     border-radius: 12px;
     display: flex;
@@ -97,9 +102,9 @@
     font-weight: 500;
     font-size: 0.9rem;
 }
-.role span {
+.role {
     color: var(--greens);
-    font-style: italic;
+    font-size: 0.7rem;
 }
 .respondent__dash-stats {
     display: grid;
@@ -118,7 +123,7 @@
     border-radius: 6px;
     overflow: hidden;
     padding: 16px 24px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     border-top: 0.5px solid var(--primary-color);
 }
 .active__surveys {
@@ -127,8 +132,9 @@
     flex-direction: column;
     gap: 24px;
     padding: 16px 24px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     border-top: 0.5px solid var(--primary-color);
+    border-radius: 6px;
 }
 .active__surveys p {
     font-size: 0.8rem;
@@ -174,4 +180,83 @@
 .respondent__survey-counts, .referral__count {
     font-size: 3rem;
     font-weight: 700;
+}
+
+/* Media Queries */
+
+@media screen and (max-width: 900px) {
+   .respondent__dash-inner {
+        width: 100%;
+        height: calc(100vh - 120px);
+        padding: 48px 32px;
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 32px;
+    }
+    .respondent__dash-sidebar {
+        position: absolute;
+        height: 100vh;
+        z-index: 3;
+        background-color: #fff;
+        top: 0;
+        left: -500px;
+        width: 400px;
+        transition: all 0.3s linear;
+    }
+    .sidebar__unhide {
+        left: 0;
+    }
+
+    .sidebar__controls {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 4;
+        width: 64px;
+        height: 64px;
+        background-color: var(--primary-color);
+        color: #fff;
+        border-radius: 100%;
+        top: 160px;
+        left: 16px;
+    }
+    .show__sidebar-btn {
+        z-index: 2;
+    }
+}
+@media screen and (max-width: 480px) {
+    .respondent__dash-inner {
+        padding: 32px 16px;
+        height: auto;
+    }
+    .respondent__dash-sidebar {
+        width: 90%;
+    }
+    .respondent__dash-main {
+        padding: 24px 16px;
+    }
+    .respondent__greeting {
+        font-size: 0.8rem;
+        font-weight: 400;
+    }
+    .dash__main-controls {
+        gap: 12px;
+    }
+    .dash__main-controls > p {
+        font-size: 0.7rem;
+        font-weight: 400;
+    }
+    .sidebar__controls {
+        transform: scale(0.6);
+        left: 0;
+    }
+    .respondent__dash-stats {
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 16px;
+    }
+    .respondent__card {
+        height: auto;
+    }
 }
