--- a/src/Components/UpdateRespondentInfo/updateform.css
+++ b/src/Components/UpdateRespondentInfo/updateform.css
@@ -8,7 +8,25 @@
     top: 0;
     padding: 32px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    overflow-y: scroll;
+}
+.respondent__server-responses {
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    left: 0;
+    top: 0;
+    height: 64px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255, 165, 165);
+    font-size: 1.1rem;
+    color: var(--greens);
+    font-weight: 500;
+    border-radius: 12px;
+}
+.response-success {
+    background-color: rgb(183, 255, 183);
 }
 .respondent__update > h4 {
     font-size: 1.5rem;
@@ -80,7 +98,9 @@
 /* Media Queries */
 
 @media screen and (max-width: 900px) {
-    
+    .respondent__update {
+        overflow-y: scroll;
+    }
     .respondent__update > h4 {
         font-size: 1.2rem;
         font-weight: 500;
