Add mobile responsiveness to password change page

--- a/src/Pages/ChangePassword/changepassword.css
+++ b/src/Pages/ChangePassword/changepassword.css
@@ -83,3 +83,15 @@
 .respondent__change-form button:hover {
     transform: scale(1.05);
 }
+
+/* Media Queries */
+
+@media screen and (max-width: 480px) {
+    .password__change-container {
+        padding: 16px;
+    }
+    .respondent__change-form {
+        width: 100%;
+        padding: 48px 16px 32px;
+    }
+}
