--- a/src/Pages/SurveyResponse/surveyresponse.css
+++ b/src/Pages/SurveyResponse/surveyresponse.css
@@ -21,10 +21,10 @@
     border-right: 0.1px solid var(--primary-color);
 }
 .survey__response-sidebar h3 {
-    font-size: 1.2rem;
-    font-weight: 500;
-    color: var(--primary-color);
+    font-size: 1.1rem;
+    font-weight: 600;
     line-height: 1;
+    text-transform: uppercase;
 }
 
 .sidebar__sections {
@@ -59,7 +59,7 @@
 }
 .response__container .note {
     font-size: 0.6rem;
-    color: var(--primary-color);
+    color: #000;
     text-align: justify;
     font-weight: 300;
 }
