--- a/src/Pages/SurveyResponse/surveyresponse.css
+++ b/src/Pages/SurveyResponse/surveyresponse.css
@@ -7,32 +7,42 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: 250px 1fr;
+    grid-template-columns: 300px 1fr;
     gap: 16px;
 }
 .survey__response-sidebar {
     width: 100%;
     height: 100%;
-    padding: 32px 16px;
     background-color: #ebebeb;
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 32px;
     border-right: 0.1px solid var(--primary-color);
+}
+.sidebar__header {
+    width: 100;
+    text-align: center;
+    background-color: var(--primary-color);
+    padding: 16px;
+    color: #fff;
+}
+.sidebar__header h2 {
+    font-size: 1.5rem;
+    font-weight: 500;
 }
 .survey__response-sidebar h3 {
     font-size: 1.1rem;
     font-weight: 600;
-    line-height: 1;
+    line-height: 1.2;
     text-transform: uppercase;
 }
 
 .sidebar__sections {
-    padding: 0 0 16px;
     border-bottom: 0.1px solid #c0c0c0;
+    padding: 0 16px 32px;
 }
 .survey__info p {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     font-weight: 300;
     color: var(--greens)
 }
@@ -43,7 +53,6 @@
     padding: 12px 24px;
     border: none;
     background-color: var(--greens);
-    margin: 12px 0 0;
     border-radius: 32px;
     color: #fff;
     cursor: pointer;
@@ -88,6 +97,6 @@
 }
 .survey__response-main iframe {
     width: 100%;
-    height: 75%;
+    height: 95%;
     overflow-x: hidden;
 }
