--- a/src/Pages/SurveyResponse/surveyresponse.css
+++ b/src/Pages/SurveyResponse/surveyresponse.css
@@ -13,43 +13,58 @@
 .survey__response-sidebar {
     width: 100%;
     height: 100%;
-    background-color: #ebebeb;
+    background-color: #f5f5f5;
     display: flex;
     flex-direction: column;
     gap: 32px;
-    border-right: 0.1px solid var(--primary-color);
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 4px;
 }
 .sidebar__header {
     width: 100;
+    height: 128px;
     text-align: center;
     background-color: var(--primary-color);
     padding: 16px;
     color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .sidebar__header h2 {
     font-size: 1.5rem;
     font-weight: 500;
 }
 .survey__response-sidebar h3 {
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     font-weight: 600;
     line-height: 1.2;
-    text-transform: uppercase;
+    margin: 0 0 8px;
 }
 
 .sidebar__sections {
-    border-bottom: 0.1px solid #c0c0c0;
-    padding: 0 16px 32px;
+    padding: 0 16px;
 }
 .survey__info p {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     font-weight: 300;
     color: var(--greens)
 }
 .survey__info span {
-    font-weight: 500;
+    font-weight: 600;
+}
+.survey__info .note {
+    font-size: 0.7rem;
+    color: #000;
+    text-align: justify;
+    font-weight: 300;
+}
+.survey__timer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 .survey__timer button {
+    text-align: center;
     padding: 12px 24px;
     border: none;
     background-color: var(--greens);
@@ -61,16 +76,13 @@
     font-weight: 700;
     color: var(--greens);
     font-size: 1.3rem;
-}.response__container {
+}
+.response__container {
+    padding: 32px 16px 0;
     display: flex;
     flex-direction: column;
     gap: 12px;
-}
-.response__container .note {
-    font-size: 0.6rem;
-    color: #000;
-    text-align: justify;
-    font-weight: 300;
+    border-top: 0.1px solid #d9d9d9;
 }
 .response__form label {
     font-size: 0.8rem;
