--- a/src/Components/UpdateAccountInfo/updateform.css
+++ b/src/Components/UpdateAccountInfo/updateform.css
@@ -1,4 +1,4 @@
-.respondent__update {
+.info__update {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -10,7 +10,7 @@
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     overflow: hidden;
 }
-.respondent__server-responses {
+.info__server-responses {
     position: absolute;
     z-index: 2;
     width: 100%;
@@ -28,20 +28,20 @@
 .response-success {
     background-color: rgb(183, 255, 183);
 }
-.respondent__update > h4 {
+.info__update > h4 {
     font-size: 1.5rem;
     font-weight: 400;
     text-transform: uppercase;
     text-align: center;
     margin: 0 0 16px;
 }
-.respondent__update-form {
+.info__update-form {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 32px;
     row-gap: 16px;
 }
-.respondent__update-form .form__field {
+.info__update-form .form__field {
     flex-direction: column;
     align-items: flex-start;
     gap: 0px;
@@ -50,20 +50,20 @@
     padding: 0 5px;
     border-bottom: 1px solid var(--greens);
 }
-.respondent__update-form .form__field  input {
+.info__update-form .form__field  input {
     background-color: rgb(249, 249, 249);
     height: 100px;
     padding: 5px;
     font-size: 0.9rem;
 }
-.respondent__update-form .form__field-select select {
+.info__update-form .form__field-select select {
     background-color: rgb(249, 249, 249);
     height: 100px;
     padding: 5px;
     font-size: 0.9rem;
     border: none;
 }
-.respondent__update-form button {
+.info__update-form button {
     padding: 12px 24px;
     border: none;
     font-weight: 500;
@@ -74,13 +74,13 @@
     cursor: pointer;
     transition: all 0.2s linear;
 }
-.respondent__update-form button:hover {
+.info__update-form button:hover {
     transform: scale(1.05)
 }
 .update__close {
     position: absolute;
-    top: 12px;
-    right: 12px;
+    top: -20px;
+    right: -20px;
     cursor: pointer;
     transition: all 0.2s linear;
     z-index: 3;
@@ -99,15 +99,15 @@
 /* Media Queries */
 
 @media screen and (max-width: 900px) {
-    .respondent__update {
+    .info__update {
         overflow-y: scroll;
     }
-    .respondent__update > h4 {
+    .info__update > h4 {
         font-size: 1.2rem;
         font-weight: 500;
         margin: 0 0 24px;
     }
-    .respondent__update-form {
+    .info__update-form {
         display: grid;
         grid-template-columns: 1fr;
         row-gap: 16px;
@@ -118,7 +118,7 @@
     }
 }
 @media screen and (max-width: 480px) {
-    .respondent__update {
+    .info__update {
         padding: 16px;
     }
 }
