--- a/src/Pages/CommonPages/Contact/contact.css
+++ b/src/Pages/CommonPages/Contact/contact.css
@@ -7,7 +7,7 @@
     height: auto;
     margin: 64px auto 0;
     padding: 32px 48px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     border-radius: 16px;
 }
 .form__container h3 {
