--- a/src/Pages/Respondents/RespondentAccount/respondentAccount.css
+++ b/src/Pages/Respondents/RespondentAccount/respondentAccount.css
@@ -177,7 +177,7 @@
     }
 
     .sidebar__controls {
-        position: absolute;
+        position: fixed;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -187,7 +187,7 @@
         background-color: var(--primary-color);
         color: #fff;
         border-radius: 100%;
-        top: 160px;
+        top: 50%;
         left: 16px;
     }
     .show__sidebar-btn {
