--- a/src/Pages/CommonPages/Login/login.css
+++ b/src/Pages/CommonPages/Login/login.css
@@ -35,6 +35,7 @@
     grid-template-columns: repeat(2, 1fr);
     border-radius: 32px;
     z-index: 1;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 .login__intro {
     position: relative;
